--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <div class="navbar">
             <div class="home">Home</div>
-            <div class="catalog"></div>
-            <div class="contact"></div>
+            <div class="catalog">Catalogue</div>
+            <div class="contact">Contact</div>
             
             <div id="google_translate_element"></div>
             
