--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             </ul>
 
             <div href="#" id="google_translate_element">
-                <div href="google_translate_element" class="translate">Tilni O'zgartirish</div>           </div>
+                <div href="google_translate_element" class="translate">Tilni O'zgartirish</div>        
+            </div>
             
--
+
     </header>
 
 
@@ -49,69 +50,69 @@
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="2">
-                <a href="">Steve Jobs</a>
+                <img src="atomic_h.jpeg" alt="2">
+                <a href="">Atomik Odatlar</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="3">
-                <a href="">Steve Jobs</a>
+                <img src="warren_b.jpeg" alt="3">
+                <a href="">The Snawball </a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="4">
-                <a href="">Steve Jobs</a>
+                <img src="elon_m.webp" alt="4">
+                <a href="">Elon Mask</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="5">
-                <a href="">Steve Jobs</a>
+                <img src="rich_poor.jpeg" alt="5">
+                <a href="">Boy ota Kambag'al ota</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="6">
-                <a href="">Steve Jobs</a>
+                <img src="alkimyo.jpeg" alt="6">
+                <a href="">Al Kimyogar</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="7">
-                <a href="">Steve Jobs</a>
+                <img src="Bill-Gates.jpeg" alt="7">
+                <a href="">Bill Gates</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="8">
-                <a href="">Steve Jobs</a>
+                <img src="ikki_eshik.jpeg" alt="8">
+                <a href="">Ikki eshik orasi</a>
                 <label for=""> 2012 yil</label>
             </div>
 
             <div class="book-wrapper">
-                <img src="" alt="9">
-                <a href="">Steve Jobs</a>
+                <img src="thought_of.jpeg" alt="9">
+                <a href="">Leonardo Davinchi</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="10">
-                <a href="">Steve Jobs</a>
+                <img src="Zuckerberg.jpeg" alt="10">
+                <a href="">Mark Zuckerberg</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="10">
-                <a href="">Steve Jobs</a>
+                <img src="deyl_carneg.jpeg" alt="10">
+                <a href="">Odamlarga qanday ta'sir qilsih</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="10">
-                <a href="">Steve Jobs</a>
+                <img src="o'tgan_kunlar.jpeg" alt="10">
+                <a href="">O'tgan kunlar</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="10">
-                <a href="">Steve Jobs</a>
+                <img src="steve_j.jpg" alt="10">
+                <a href="">Stiv Jobs</a>
                 <label for=""> 2012 yil</label>
             </div>
             <div class="book-wrapper">
-                <img src="" alt="10">
-                <a href="">Steve Jobs</a>
+                <img src="relativity_einst.jpg" alt="10">
+                <a href="">Nisbiylok Nazariyasi</a>
                 <label for=""> 2012 yil</label>
             </div>
         </div>
