--- a/index.html
+++ b/index.html
@@ -46,74 +46,76 @@
 
             <div class="book-wrapper">
                 <img src="jadidad_nam.jpeg" alt="1">
-                <a href="">Jadid adabiyoti namoyondalari</a>
-                <label for=""> 2012 yil</label>
+                <a href="">Abdulhamid Cho'lpon</a>
+                <h6>    </h6>
+                <label for=""> 2022 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="atomic_h.jpeg" alt="2">
                 <a href="">Atomik Odatlar</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 2018 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="warren_b.jpeg" alt="3">
                 <a href="">The Snawball </a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 2008 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="elon_m.webp" alt="4">
                 <a href="">Elon Mask</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 2015 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="rich_poor.jpeg" alt="5">
                 <a href="">Boy ota Kambag'al ota</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 1997 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="alkimyo.jpeg" alt="6">
                 <a href="">Al Kimyogar</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 1988 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="Bill-Gates.jpeg" alt="7">
                 <a href="">Bill Gates</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 2019 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="ikki_eshik.jpeg" alt="8">
                 <a href="">Ikki eshik orasi</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 1986 yil</label>
             </div>
 
             <div class="book-wrapper">
                 <img src="thought_of.jpeg" alt="9">
                 <a href="">Leonardo Davinchi</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 1906 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="Zuckerberg.jpeg" alt="10">
                 <a href="">Mark Zuckerberg</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 2019 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="deyl_carneg.jpeg" alt="10">
                 <a href="">Odamlarga qanday ta'sir qilsih</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 1998 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="o'tgan_kunlar.jpeg" alt="10">
                 <a href="">O'tgan kunlar</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 1925 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="steve_j.jpg" alt="10">
                 <a href="">Stiv Jobs</a>
-                <label for=""> 2012 yil</label>
+                <label for=""> 2011 yil</label>
             </div>
             <div class="book-wrapper">
                 <img src="relativity_einst.jpg" alt="10">
-                <a href="">Nisbiylok Nazariyasi</a>
-                <label for=""> 2012 yil</label>
+                <a href=""><h4>Nisbiylik Nazariyasi</h4></a>
+                <h5>Albert Einstein</h5>
+                <label for=""> 1916 yil</label>
             </div>
         </div>
 
