--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                     
             </ul>
 
-            <div href="#" id="google_translate_element">
-                <div href="google_translate_element" class="translate">Tilni O'zgartirish</div>        
-            </div>
+            <div href="google_translate_element" class="translate">Tilni O'zgartirish</div>        
+            <div href="#" id="google_translate_element"> </div>
             
 
     </header>
@@ -46,76 +45,88 @@
 
             <div class="book-wrapper">
                 <img src="jadidad_nam.jpeg" alt="1">
-                <a href="">Abdulhamid Cho'lpon</a>
-                <h6>    </h6>
-                <label for=""> 2022 yil</label>
+                <a href=""><h4>Abdulhamid Cho'lpon</h4></a>
+                <h5>Nutq</h5>
+                <p> 2022 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="atomic_h.jpeg" alt="2">
-                <a href="">Atomik Odatlar</a>
-                <label for=""> 2018 yil</label>
+                <a href=""><h4>Atomik Odatlar</h4></a>
+                <h5>James Clear</h5>
+                <p> 2018 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="warren_b.jpeg" alt="3">
-                <a href="">The Snawball </a>
-                <label for=""> 2008 yil</label>
+                <a href=""><h4>The Snawball</h4></a>
+                <h5>Alice Schroeder</h5>
+                <p> 2008 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="elon_m.webp" alt="4">
-                <a href="">Elon Mask</a>
-                <label for=""> 2015 yil</label>
+                <a href=""><h4>Elon Mask</h4></a>
+                <h5>Ashlee Vance</h5>
+                <p> 2015 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="rich_poor.jpeg" alt="5">
-                <a href="">Boy ota Kambag'al ota</a>
-                <label for=""> 1997 yil</label>
+                <a href=""><h4>Boy ota Kambag'al ota</h4></a>
+                <h5>Robert Kiyosaki</h5>
+                <p> 1997 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="alkimyo.jpeg" alt="6">
-                <a href="">Al Kimyogar</a>
-                <label for=""> 1988 yil</label>
+                <a href=""><h4>Al Kimyogar</h4></a>
+                <h5>Paulo Coelho</h5>
+                <p> 1988 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="Bill-Gates.jpeg" alt="7">
-                <a href="">Bill Gates</a>
-                <label for=""> 2019 yil</label>
+                <a href=""><h4>Bill Gates</h4></a>
+                <h5>Ajay Sethi</h5>
+                <p> 2019 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="ikki_eshik.jpeg" alt="8">
-                <a href="">Ikki eshik orasi</a>
-                <label for=""> 1986 yil</label>
+                <a href=""><h4>Ikki eshik orasi</h4></a>
+                <h5>O'tkir Hoshimov</h5>
+                <p> 1986 yil</p>
             </div>
 
             <div class="book-wrapper">
                 <img src="thought_of.jpeg" alt="9">
-                <a href="">Leonardo Davinchi</a>
-                <label for=""> 1906 yil</label>
+                <a href=""><h4>Thoughts of life and art</h4></a>
+                <h5>Leonardo Davinci</h5>
+                <p> 1906 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="Zuckerberg.jpeg" alt="10">
-                <a href="">Mark Zuckerberg</a>
-                <label for=""> 2019 yil</label>
+                <a href=""><h4>Mark Zuckerberg</h4></a>
+                <h5>George Ilian</h5>
+                <p> 2019 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="deyl_carneg.jpeg" alt="10">
-                <a href="">Odamlarga qanday ta'sir qilsih</a>
-                <label for=""> 1998 yil</label>
+                <a href=""><h4>Odamlarga qanday ta'sir qilsih</h4></a>
+                <h5>Deil Carnegie</h5>
+                <p> 1998 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="o'tgan_kunlar.jpeg" alt="10">
-                <a href="">O'tgan kunlar</a>
-                <label for=""> 1925 yil</label>
+                <a href=""><h4>O'tgan kunlar</h4></a>
+                <h5>Abdulla Qodiriy</h5>
+                <p> 1925 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="steve_j.jpg" alt="10">
-                <a href="">Stiv Jobs</a>
-                <label for=""> 2011 yil</label>
+                <a href=""><h4>Stiv Jobs</h4></a>
+                <h5>Walter Isaacson</h5>
+                <p> 2011 yil</p>
             </div>
             <div class="book-wrapper">
                 <img src="relativity_einst.jpg" alt="10">
                 <a href=""><h4>Nisbiylik Nazariyasi</h4></a>
                 <h5>Albert Einstein</h5>
-                <label for=""> 1916 yil</label>
+                <p> 1916 yil</p>
             </div>
         </div>
 
