--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
         <div class="books-container">
 
             <div class="book-wrapper">
-                <img src="jadidad_nam.jpeg" alt="1">
+                <img src="images/jadidad_nam.jpeg" alt="1">
                 <a href=""><h4>Abdulhamid Cho'lpon</h4></a>
                 <h5>Nutq</h5>
                 <p> 2022 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="atomic_h.jpeg" alt="2">
+                <img src="images/atomic_h.jpeg" alt="2">
                 <a href=""><h4>Atomik Odatlar</h4></a>
                 <h5>James Clear</h5>
                 <p> 2018 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="warren_b.jpeg" alt="3">
+                <img src="images/warren_b.jpeg" alt="3">
                 <a href=""><h4>The Snawball</h4></a>
                 <h5>Alice Schroeder</h5>
                 <p> 2008 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="elon_m.webp" alt="4">
+                <img src="images/elon_m.webp" alt="4">
                 <a href=""><h4>Elon Mask</h4></a>
                 <h5>Ashlee Vance</h5>
                 <p> 2015 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="rich_poor.jpeg" alt="5">
+                <img src="images/rich_poor.jpeg" alt="5">
                 <a href=""><h4>Boy ota Kambag'al ota</h4></a>
                 <h5>Robert Kiyosaki</h5>
                 <p> 1997 yil</p>
@@ -80,50 +80,50 @@
                 <p> 1988 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="Bill-Gates.jpeg" alt="7">
+                <img src="images/Bill-Gates.jpeg" alt="7">
                 <a href=""><h4>Bill Gates</h4></a>
                 <h5>Ajay Sethi</h5>
                 <p> 2019 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="ikki_eshik.jpeg" alt="8">
+                <img src="images/ikki_eshik.jpeg" alt="8">
                 <a href=""><h4>Ikki eshik orasi</h4></a>
                 <h5>O'tkir Hoshimov</h5>
                 <p> 1986 yil</p>
             </div>
 
             <div class="book-wrapper">
-                <img src="thought_of.jpeg" alt="9">
+                <img src="images/thought_of.jpeg" alt="9">
                 <a href=""><h4>Thoughts of life and art</h4></a>
                 <h5>Leonardo Davinci</h5>
                 <p> 1906 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="Zuckerberg.jpeg" alt="10">
+                <img src="images/Zuckerberg.jpeg" alt="10">
                 <a href=""><h4>Mark Zuckerberg</h4></a>
                 <h5>George Ilian</h5>
                 <p> 2019 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="deyl_carneg.jpeg" alt="10">
+                <img src="images/deyl_carneg.jpeg" alt="10">
                 <a href=""><h4>Odamlarga qanday ta'sir qilsih</h4></a>
                 <h5>Deil Carnegie</h5>
                 <p> 1998 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="o'tgan_kunlar.jpeg" alt="10">
+                <img src="images/o'tgan_kunlar.jpeg" alt="10">
                 <a href=""><h4>O'tgan kunlar</h4></a>
                 <h5>Abdulla Qodiriy</h5>
                 <p> 1925 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="steve_j.jpg" alt="10">
+                <img src="images/steve_j.jpg" alt="10">
                 <a href=""><h4>Stiv Jobs</h4></a>
                 <h5>Walter Isaacson</h5>
                 <p> 2011 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="relativity_einst.jpg" alt="10">
+                <img src="images/relativity_einst.jpg" alt="10">
                 <a href=""><h4>Nisbiylik Nazariyasi</h4></a>
                 <h5>Albert Einstein</h5>
                 <p> 1916 yil</p>
