--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p> 1997 yil</p>
             </div>
             <div class="book-wrapper">
-                <img src="alkimyo.jpeg" alt="6">
+                <img src="images/alkimyo.jpeg" alt="6">
                 <a href=""><h4>Al Kimyogar</h4></a>
                 <h5>Paulo Coelho</h5>
                 <p> 1988 yil</p>
