--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#" class="contact">Kontakt</a></li>
             </ul>
 
-          //  <div href="#" class="translate">Tilni O'zgartirish</div>      
+<!--             <div href="#" class="translate">Tilni O'zgartirish</div>       -->
 
             <div href="#" id="google_translate_element"> </div>
             
