--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                 <li><a href="#" class="home_p">Bosh sahifa</a></li>
                 <li><a href="#" class="catalog">Katalog</a></li>
                 <li><a href="#" class="contact">Kontakt</a></li>
+                <li><a href="#" class="translate">Tilni O'zgartirish</a></li>
+
             </ul>
-            <div href="#" class="translate">Tilni O'zgartirish</div>      
+<!--             <div href="#" class="translate">Tilni O'zgartirish</div>       -->
 
             <div href="#" id="google_translate_element"> </div>
             
