--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Creating header including navigation bar elements -->
     <header>
     
-            <a href="#" class="logo">E<span>Javon</span></a>
+            <a href="#" class="logo">Kitob<span>Javoni</span></a>
             <div class="bx bx-menu" id="menu-icon"></div>
              
             <ul class="navbar">
