--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <label class="search-title" for="search">Qidirish</label>
             <input type="search" placeholder="Kitob, Qo'llanma yoki Maqola nomini kiriting" id="search">
         </div>
-
+      <!--   Creating a boxes for books and their descriptions -->
         <div class="books-container">
 
             <div class="book-wrapper">
