--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     </section>
 
-
+    <!--  Calling javascript filees and some libraries   -->
     <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="script.js"></script>
 </body>
